# wasm-minimal-examples

./: Cargo.toml  LICENSE  README.md  justfile  module.wat
in-browser/: justfile
in-browser/src/: lib.rs
in-browser/www/: package.json  tsconfig.json
in-component/: .gitignore  justfile
in-component/adder/: Cargo.toml
in-component/adder/src/: lib.rs
in-component/adder/wit/: world.wit
in-component/calc/: Cargo.toml
in-component/calc/src/: main.rs
in-component/calc/wit/: world.wit
www/: .gitignore  package-lock.json
www/src/: index.html  index.ts
