[package]
name = "calc"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.32.0", features = ["bitflags"] }

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component.target.dependencies]
"example:add" = { path = "../adder/wit" }

